--- a/MinhaFoto/app/build.gradle
+++ b/MinhaFoto/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 }
 
 android {
-    namespace 'br.com.slmm.foto5'
+    namespace 'br.com.slmm.minhafoto'
     compileSdk 33
 
     defaultConfig {
-        applicationId "br.com.slmm.foto5"
-        minSdk 22
+        applicationId "br.com.slmm.minhafoto"
+        minSdk 23
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -30,17 +30,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-
-    buildFeatures {
-        viewBinding true
-    }
-
 }
 
 dependencies {
-
-    implementation "androidx.activity:activity-ktx:1.2.2"
-    implementation "androidx.fragment:fragment-ktx:1.3.2"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
