--- a/lista2/app/build.gradle
+++ b/lista2/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 }
 
 android {
-    namespace 'br.com.slmm.foto5'
+    namespace 'br.com.slmm.lista2'
     compileSdk 33
 
     defaultConfig {
-        applicationId "br.com.slmm.foto5"
-        minSdk 22
+        applicationId "br.com.slmm.lista2"
+        minSdk 28
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -30,19 +30,16 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-
-    buildFeatures {
-        viewBinding true
+    // coloca isso primeiro...
+    viewBinding {
+        enabled = true
     }
 
 }
 
 dependencies {
 
-    implementation "androidx.activity:activity-ktx:1.2.2"
-    implementation "androidx.fragment:fragment-ktx:1.3.2"
-
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
